# ClinicalExtractor

./: .dockerignore  .gitignore  Dockerfile  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  pyproject.toml  run_tests.sh  server.mjs  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
.sdd/specs/001-clinical-entity-extraction/: data-model.md  plan.md  spec.md  tasks.md
clinical_nlp/: __init__.py  evaluation.py  extractors.py  feature_engineering.py  lexicons.py  llm_bridge.py  multimodal_evaluation.py  negation.py  normalization.py  orchestrator.py  rollup.py  schemas.py  service.py  validators.py
clinical_nlp/data/: terminology_seed.json
data/gold/: seed_notes.jsonl
docs/: ADR-001-pipeline-consolidation.md  annotation-guideline-and-labeling-plan.md  api-contracts.md  backend-persistence-design.md  deployment-smoke-test.md  operating-point-policy.md  pre-review-audit.md  remediation-summary.md
docs/plans/: 2026-06-05-clinical-entity-extraction-implementation.md
scripts/: deployment-smoke-test.mjs  run_eval.py  train-risk-model.mjs
server/: api.mjs  api.test.mjs  engine.mjs  engineHealth.mjs  exportApi.test.mjs  exportGates.mjs  exportGates.test.mjs  frozenModules.test.mjs  riskFeatures.test.mjs
src/: App.tsx  styles.css
src/components/clinical-entity-extractor/: ClinicalEntityExtractorPrototype.test.tsx  ClinicalEntityExtractorPrototype.tsx  ClinicalTextInput.tsx  DocumentOutputPanel.tsx  EntityCard.tsx  EntityDetailPanel.tsx  EvalLabPanel.tsx  ExtractedEntityPanel.tsx  HighlightedClinicalText.tsx  PipelineLabPanel.tsx  SpecialtySelector.tsx  (+1 more)
tests/: test_clinical_edge_cases.py  test_engine_acceptance.py  test_evaluation.py  test_feature_engineering.py  test_multimodal_evaluation.py  test_negation.py  test_nitpicks.py  test_normalization.py  test_orchestration.py  test_rollup.py  test_validators.py
(+43 files in other folders)
