[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "clinical-nlp-extraction"
version = "0.1.0"
description = "Typed Clinical NLP utilities for mention extraction, validation, negation, and evaluation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
# Audit C6: ruff is pinned exactly so the toolchain does not drift (a current
# ruff yielded 141+ findings on code the author linted clean). CI installs from
# requirements-dev.lock; this version MUST match the CI workflow and the lock.
dev = [
  "coverage[toml]>=7.6",
  "mypy>=1.11",
  "pytest>=8.3",
  "ruff==0.15.16",
]
classic-ml = [
  "numpy>=2.0",
  "pandas>=2.2",
  "scikit-learn>=1.5",
]
nlp = [
  "spacy>=3.7",
  "transformers>=4.44",
]
llm = [
  "instructor>=1.7",
  "langchain-core>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["clinical_nlp"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "B",
  "C4",
  "D",
  "E",
  "F",
  "I",
  "N",
  "PT",
  "RET",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = [
  "D100",
  "D104",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_unreachable = true
pretty = true

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
branch = true
source = ["clinical_nlp"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
